--- a/JS_cw_24_Zawartosc_pliku_TXT_na_stronie/index.html
+++ b/JS_cw_24_Zawartosc_pliku_TXT_na_stronie/index.html
@@ -9,9 +9,10 @@
                 window.onload = function () {
                     var x = 'plik.txt';
                     document.getElementById('wynik').src = x;
+                    console.log(x);
                 }
             </script>
-            <iframe id="wynik"></iframe><br />
+            <iframe id="wynik"></iframe>
         </section>
 	</body>
 </html>
