--- a/JS_cw_08_stringi_tekstowe/cw_8.html
+++ b/JS_cw_08_stringi_tekstowe/cw_8.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <script>
-            var tekst="Witaj w moim Świecie !!!";
+            var tekst=Prompt("Wprowadź tekst. Np.:","Witaj w moim Świecie !!!");
             tekst=tekst.toUpperCase();//transform na Big text
             var dl_tekstu=tekst.length;
             var napis="";
