--- a/JS_cw_09_walidacja2/index.html
+++ b/JS_cw_09_walidacja2/index.html
@@ -10,22 +10,28 @@
     <!-- hasło musi zawierać minimum 3 znaki oraz minimum jedną literę -->
     <h1>Zamówienie</h1>  
     <form action="plik.html" method="POST" onsubmit="return sprawdz(this);">
-      <select id="sprzet">
-        <option value="1"></option>
-        <option value="2">Dysk twardy</option>
-        <option value="3">Pamięć RAM</option>
-        <option value="4">Myszka komputerowa</option>
-      </select>
-      <select id="kolor">
-        <option value="1"></option>
-        <option value="2">Różowy</option>
-        <option value="3">Biały</option>
-        <option value="4">Czarny</option>
-      </select>
-      <br />
-      <input type="checkbox" id="regulamin" value="1" />Czy zkceptujesz regulamin?<br />
-      <input type="submit" value="Wyślij zamówienie" />
+		Wybierz artykuł:
+		<select id="sprzet">
+			<option value="1"></option>
+			<option value="2">Dysk twardy</option>
+			<option value="3">Pamięć RAM</option>
+			<option value="4">Myszka komputerowa</option>
+		</select>
+		  <br />
+		  Wybór koloru:
+		  <select id="kolor">
+			<option value="1"></option>
+			<option value="2">Różowy</option>
+			<option value="3">Biały</option>
+			<option value="4">Czarny</option>
+		</select>
+		<br />
+		<label>
+			<input type="checkbox" id="regulamin" value="1" />Czy zkceptujesz regulamin?
+		</label>
+		<br />
+		<input type="submit" value="Wyślij zamówienie" />
     </form>
-      <p id="wynik"></p>
+      <section id="wynik"></section>
   </body>
 </html>
