--- a/JS_cw_09_walidacja2/plik.html
+++ b/JS_cw_09_walidacja2/plik.html
@@ -6,6 +6,6 @@
 		<link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        Udało się złóżyć zamówieniae
+        Udało się złóżyć zamówienie
     </body>
 </html>
